Bug 66679 - libbsd-0.5.2 segfault in spt_copyenv()
Summary: libbsd-0.5.2 segfault in spt_copyenv()
Status: RESOLVED FIXED
Alias: None
Product: libbsd
Classification: Unclassified
Component: libbsd (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Guillem Jover
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-08 03:24 UTC by Eric Smith
Modified: 2013-07-14 18:10 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Eric Smith 2013-07-08 03:24:14 UTC
libbsd-0.5.2 is crashing in setproctitle on Fedora 19, this time with claws-mail by way of libnss.  This may be due to the use of _dl_open() to load libnss_wins.so.2.  I haven't had time to dig into this any further.  I'm tempted to simply make setproctitle do nothing.

Here's the Fedora bug:
https://bugzilla.redhat.com/show_bug.cgi?id=981799
Comment 1 Guillem Jover 2013-07-14 18:10:08 UTC
This should be fixed now in 0.6.0, with the constructor logic moved into a static library, sidestepping the whole issue. Please see the announcement for more details.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.